# openingGap

./: .flake8  .pre-commit-config.yaml  README.md  datasets_builder.py  main.py  openingsGap_func.py  pyproject.toml
.github/actions/ci-setup/: action.yml
.github/workflows/: cicd.yml
tests/: test_example.py
