[tool.poetry]
name = "openinggap"
version = "0.1.0"
description = ""
authors = ["Mathieu Bartels <mathieubartels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pickles = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
