[tool.poetry]
name = "openinggap"
version = "0.1.0"
description = ""
authors = ["Mathieu Bartels <mathieubartels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pickles = "^0.1.1"
pytest = "^7.4.0"
safety = "^2.3.5"
inputimeout = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
